<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/untitled_design2"

    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    tools:openDrawer="start">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >




        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:elevation="4dp"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"


            />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Relativelay">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="28dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img_40"
                    android:contentDescription="@null"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Chess_Openings"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="32sp"
                    android:textColor="#000000" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Description"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/white"/>


            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                app:cardCornerRadius="28dp"
                android:layout_marginBottom="-28dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="28dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Welcome"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Intrested"
                        android:alpha="0.7"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="30sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GetStarted"
                        android:alpha="0.7"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="11sp"/>
                    <Button
                        android:id="@+id/Button1"
                        android:layout_width="320sp"
                        android:layout_height="60sp"
                        android:text="@string/button_openings"
                        android:background="@color/LightBlue"
                        android:onClick="GoingtoHomeFragment"
                        app:cornerRadius="32sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10sp"
                        android:text="@string/TryQuiz"
                        android:alpha="0.7"
                        android:textStyle="bold"
                        android:textSize="20sp"/>
                    <Button
                        android:id="@+id/Button2"
                        android:onClick="GoingtoQuizFragment"
                        android:layout_width="320sp"

                        android:layout_height="60sp"
                        android:background="@color/LightBlue"
                        android:text="@string/button_quiz"
                        app:cornerRadius="32sp"
                        android:layout_marginBottom="50sp"
                        android:layout_marginTop="10sp"/>



                </LinearLayout>
            </androidx.cardview.widget.CardView>



    </RelativeLayout>


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|bottom"
        app:bottomInsetScrimEnabled="true"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@color/black"


        app:menu="@menu/nav_menu" />



</androidx.drawerlayout.widget.DrawerLayout>